syntax = "proto3";

package deployer.service.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

// Configuration status
enum ConfigurationStatus {
  CONFIG_STATUS_UNSPECIFIED = 0;
  CONFIG_STATUS_ACTIVE = 1;
  CONFIG_STATUS_INACTIVE = 2;
  CONFIG_STATUS_ERROR = 3;
}

// Target configuration entity - represents a single deployment endpoint
message TargetConfiguration {
  optional string id = 1 [json_name = "id"];
  optional uint32 tenant_id = 2 [json_name = "tenantId"];
  optional string name = 3 [json_name = "name"];
  optional string description = 4 [json_name = "description"];
  optional string provider_type = 5 [json_name = "providerType"];
  optional google.protobuf.Struct config = 6 [json_name = "config"];
  optional ConfigurationStatus status = 7 [json_name = "status"];
  optional string status_message = 8 [json_name = "statusMessage"];
  optional google.protobuf.Timestamp last_deployment_at = 9 [json_name = "lastDeploymentAt"];
  optional uint32 created_by = 100 [json_name = "createdBy"];
  optional uint32 updated_by = 101 [json_name = "updatedBy"];
  optional google.protobuf.Timestamp create_time = 200 [json_name = "createTime"];
  optional google.protobuf.Timestamp update_time = 201 [json_name = "updateTime"];
}

// Provider info
message ProviderInfo {
  string type = 1 [json_name = "type"];
  string display_name = 2 [json_name = "displayName"];
  string description = 3 [json_name = "description"];
  bool supports_verification = 4 [json_name = "supportsVerification"];
  bool supports_rollback = 5 [json_name = "supportsRollback"];
  repeated string required_config_fields = 6 [json_name = "requiredConfigFields"];
  repeated string required_credential_fields = 7 [json_name = "requiredCredentialFields"];
}

// Create a new target configuration
message CreateConfigurationRequest {
  uint32 tenant_id = 1 [
    json_name = "tenantId",
    (google.api.field_behavior) = REQUIRED
  ];
  string name = 2 [
    json_name = "name",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 128
    }
  ];
  optional string description = 3 [
    json_name = "description",
    (buf.validate.field).string = {max_len: 512}
  ];
  string provider_type = 4 [
    json_name = "providerType",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {min_len: 1}
  ];
  google.protobuf.Struct credentials = 5 [
    json_name = "credentials",
    (google.api.field_behavior) = REQUIRED
  ];
  optional google.protobuf.Struct config = 6 [json_name = "config"];
}

message CreateConfigurationResponse {
  TargetConfiguration configuration = 1 [json_name = "configuration"];
}

// Get a target configuration
message GetConfigurationRequest {
  string id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED
  ];
}

message GetConfigurationResponse {
  TargetConfiguration configuration = 1 [json_name = "configuration"];
}

// List target configurations
message ListConfigurationsRequest {
  optional uint32 tenant_id = 1 [json_name = "tenantId"];
  optional string provider_type = 2 [json_name = "providerType"];
  optional ConfigurationStatus status = 3 [json_name = "status"];
  optional uint32 page = 10 [json_name = "page"];
  optional uint32 page_size = 11 [json_name = "pageSize"];
}

message ListConfigurationsResponse {
  repeated TargetConfiguration items = 1 [json_name = "items"];
  uint64 total = 2 [json_name = "total"];
}

// Update a target configuration
message UpdateConfigurationRequest {
  string id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED
  ];
  optional string name = 2 [
    json_name = "name",
    (buf.validate.field).string = {
      min_len: 1
      max_len: 128
    }
  ];
  optional string description = 3 [
    json_name = "description",
    (buf.validate.field).string = {max_len: 512}
  ];
  optional google.protobuf.Struct credentials = 4 [json_name = "credentials"];
  optional google.protobuf.Struct config = 5 [json_name = "config"];
  optional ConfigurationStatus status = 6 [json_name = "status"];
}

message UpdateConfigurationResponse {
  TargetConfiguration configuration = 1 [json_name = "configuration"];
}

// Delete a target configuration
message DeleteConfigurationRequest {
  string id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED
  ];
}

// Validate credentials
message ValidateConfigurationCredentialsRequest {
  string provider_type = 1 [
    json_name = "providerType",
    (google.api.field_behavior) = REQUIRED
  ];
  google.protobuf.Struct credentials = 2 [
    json_name = "credentials",
    (google.api.field_behavior) = REQUIRED
  ];
  // Optional config for context-aware validation (e.g., zone_id for Cloudflare)
  google.protobuf.Struct config = 3 [json_name = "config"];
}

message ValidateConfigurationCredentialsResponse {
  bool valid = 1 [json_name = "valid"];
  optional string message = 2 [json_name = "message"];
}

// List available providers
message ListConfigurationProvidersRequest {}

message ListConfigurationProvidersResponse {
  repeated ProviderInfo providers = 1 [json_name = "providers"];
}

// Target Configuration Service
service TargetConfigurationService {
  // Create a new target configuration
  rpc CreateConfiguration(CreateConfigurationRequest) returns (CreateConfigurationResponse) {
    option (google.api.http) = {
      post: "/v1/target-configurations"
      body: "*"
    };
  }
  // Get a target configuration by ID
  rpc GetConfiguration(GetConfigurationRequest) returns (GetConfigurationResponse) {
    option (google.api.http) = {
      get: "/v1/target-configurations/{id}"
    };
  }
  // List target configurations
  rpc ListConfigurations(ListConfigurationsRequest) returns (ListConfigurationsResponse) {
    option (google.api.http) = {
      get: "/v1/target-configurations"
    };
  }
  // Update a target configuration
  rpc UpdateConfiguration(UpdateConfigurationRequest) returns (UpdateConfigurationResponse) {
    option (google.api.http) = {
      put: "/v1/target-configurations/{id}"
      body: "*"
    };
  }
  // Delete a target configuration
  rpc DeleteConfiguration(DeleteConfigurationRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/target-configurations/{id}"
    };
  }
  // Validate provider credentials
  rpc ValidateCredentials(ValidateConfigurationCredentialsRequest) returns (ValidateConfigurationCredentialsResponse) {
    option (google.api.http) = {
      post: "/v1/target-configurations/validate-credentials"
      body: "*"
    };
  }
  // List available providers
  rpc ListProviders(ListConfigurationProvidersRequest) returns (ListConfigurationProvidersResponse) {
    option (google.api.http) = {
      get: "/v1/target-configurations/providers"
    };
  }
}
